# Amazing-Market

./: CHECKLIST.md  CI_REPORT.md  GUIA_GITHUB_SECRETS.md  MIGRACION_DB.md  RESUMEN_CAMBIOS.txt  RESUMEN_SEGURIDAD.txt  start.sh
.github/workflows/: ci.yml
backend/: .gitignore  README_API.md  database.sql  export_database_data.sh  merge_database_files.sh  pyproject.toml
backend/app/: auth_utils.py  config.py  database.py  main.py  models.py
backend/app/routers/: auth.py  cart.py  products.py
backend/tests/: conftest.py  test_auth.py  test_cart.py  test_products.py  test_root.py  test_unit_auth_utils.py  test_unit_cart_business.py
frontend/: .gitignore  README_FRONTEND.md  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: product-card.tsx  product-grid.tsx  subcategory-rect-grid.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx
frontend/src/data/: categories.ts  products.ts
frontend/src/lib/: api.ts  auth.ts  utils.test.ts  utils.ts
frontend/src/pages/: category-view.tsx  login-view.tsx  main-view.tsx  product-view.tsx  products-view.tsx  profile-view.tsx  purchase-view.tsx  register-view.tsx  shopping-cart-view.tsx
